Added text and styling

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
         <div class="col-12 d-flex justify-content-center">
           <h5>CELEBRATING</h5>
         </div>
+        <div class="col-12 d-flex justify-content-center">
+          <h1>2 months of JavaScript</h1>
+        </div>
+        <div class="col-12 d-flex justify-content-center">
+          <h3>Ready to try Doing Stuff With Data?</h3>
+        </div>
       </div>
     </div>
 
